Shift positioning to backend-at-scale and elevate skill visibility

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Srikar Reddy Karemma | Senior Software Engineer</title>
     <meta
       name="description"
-      content="Portfolio of Srikar Reddy Karemma - Senior Software Engineer specializing in IAM, distributed systems, and cloud-native architecture."
+      content="Portfolio of Srikar Reddy Karemma - Backend engineer building high-scale distributed systems, APIs, and cloud-native platforms."
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -38,8 +38,9 @@
             <p class="eyebrow">Senior Software Engineer</p>
             <h1>Srikar Reddy Karemma</h1>
             <p class="hero-subtitle">
-              I design and scale mission-critical identity platforms, secure APIs, and distributed systems that serve
-              millions of users with strict latency and reliability targets.
+              Backend engineer focused on high-scale distributed systems, API platform architecture, and reliability
+              engineering. I build and optimize services that handle intense production traffic with strict latency and
+              availability goals.
             </p>
             <div class="hero-meta">
               <span>San Jose, California</span>
@@ -54,11 +55,11 @@
           </div>
           <aside class="focus-panel" aria-label="Current focus">
             <p class="eyebrow">Current Focus</p>
-            <h2>Identity, reliability, and scale.</h2>
+            <h2>Backend architecture at production scale.</h2>
             <ul class="focus-list">
-              <li>Tier-0 IAM architecture for global commerce traffic</li>
-              <li>Passkeys and FIDO2 adoption at production scale</li>
-              <li>Latency-sensitive platform modernization and resilience</li>
+              <li>Distributed services and multi-region backend design</li>
+              <li>High-throughput APIs with low-latency SLO outcomes</li>
+              <li>Resilience, autoscaling, and deep production observability</li>
             </ul>
           </aside>
         </div>
@@ -75,12 +76,37 @@
         </article>
         <article>
           <h2>60%</h2>
-          <p>Year-over-year cost reduction on IAM session platform.</p>
+          <p>Year-over-year backend platform cost reduction.</p>
         </article>
         <article>
           <h2>3,000+</h2>
           <p>Datasets made accessible via NASA storage-agnostic APIs.</p>
         </article>
+      </section>
+
+      <section class="skills-spotlight reveal" aria-label="Core backend strengths">
+        <div class="section-head">
+          <p class="eyebrow">At A Glance</p>
+          <h2>Core Backend Strengths</h2>
+        </div>
+        <div class="spotlight-grid">
+          <article class="spotlight-card">
+            <h3>Languages</h3>
+            <p>Java, TypeScript, JavaScript, SQL, C</p>
+          </article>
+          <article class="spotlight-card">
+            <h3>Backend Stack</h3>
+            <p>Spring Boot, Microservices, REST APIs, Kafka, Node.js, Express</p>
+          </article>
+          <article class="spotlight-card">
+            <h3>Scale and Infra</h3>
+            <p>AWS, GCP, Azure, Kubernetes (AKS), Docker, Redis, PostgreSQL</p>
+          </article>
+          <article class="spotlight-card">
+            <h3>Reliability</h3>
+            <p>Prometheus, Grafana, Splunk, Dynatrace, rate limiting, autoscaling, SLO alerting</p>
+          </article>
+        </div>
       </section>
 
       <section id="experience" class="section reveal">
@@ -99,15 +125,15 @@
             <p class="role-duration">01/2022 - Present (Promoted twice)</p>
           </div>
           <div class="tag-row">
-            <span>IAM</span>
-            <span>SSO</span>
-            <span>FIDO2</span>
+            <span>Backend Engineering</span>
+            <span>Distributed Systems</span>
+            <span>API Platform</span>
             <span>Kubernetes</span>
             <span>Platform Reliability</span>
           </div>
           <p>
-            Senior engineer on Walmart's tier-0 IAM platform handling high-volume IAM, SSO, and MFA requests that
-            underpin authentication and authorization for Walmart.com and global subsidiaries.
+            Senior backend engineer on Walmart's tier-0 platform, building high-throughput services that process
+            mission-critical authentication and session traffic for Walmart.com and global subsidiaries.
           </p>
           <ul>
             <li>
@@ -238,7 +264,7 @@
       <section id="contact" class="section contact reveal">
         <h2>Let's Build Reliable Systems at Scale</h2>
         <p>
-          Open to conversations about platform architecture, IAM modernization, and high-traffic distributed systems.
+          Open to conversations about backend architecture, distributed systems, and high-scale platform engineering.
         </p>
         <div class="hero-actions">
           <a class="btn btn-primary" href="mailto:ksreddy4599@gmail.com">Email Me</a>
