Refine focus language and clarify impact metrics

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
           </div>
           <aside class="focus-panel" aria-label="Current focus">
             <p class="eyebrow">Current Focus</p>
-            <h2>Backend architecture at production scale.</h2>
+            <h2>Backend architecture at enterprise scale.</h2>
             <ul class="focus-list">
               <li>Distributed services and multi-region backend design</li>
               <li>High-throughput APIs with low-latency SLO outcomes</li>
-              <li>Resilience, autoscaling, and deep production observability</li>
+              <li>Resilience, autoscaling, and comprehensive service observability</li>
             </ul>
           </aside>
         </div>
@@ -68,15 +68,15 @@
       <section class="impact reveal" aria-label="Key impact metrics">
         <article>
           <h2>99.999%</h2>
-          <p>Uptime during major Walmart commerce events.</p>
+          <p>Availability delivered for tier-0 Walmart authentication and session services during peak commerce events.</p>
         </article>
         <article>
           <h2>100M+</h2>
-          <p>Monthly login attempts observed for passkey/FIDO2 rollout.</p>
+          <p>Monthly authentication requests served by backend systems I helped engineer for Passkey/FIDO2 adoption.</p>
         </article>
         <article>
           <h2>60%</h2>
-          <p>Year-over-year backend platform cost reduction.</p>
+          <p>Year-over-year infrastructure cost reduction by optimizing Walmart's IAM session platform footprint.</p>
         </article>
         <article>
           <h2>3,000+</h2>
