Reframe portfolio as backend journey and add custom tech graphics

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Srikar Reddy Karemma | Senior Software Engineer</title>
+    <title>Srikar Reddy Karemma | Backend Engineer</title>
     <meta
       name="description"
-      content="Portfolio of Srikar Reddy Karemma - Backend engineer building high-scale distributed systems, APIs, and cloud-native platforms."
+      content="Portfolio of Srikar Reddy Karemma - Backend engineer building resilient distributed systems and high-throughput APIs at enterprise scale."
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,7 +23,7 @@
     <header class="site-header">
       <a class="brand" href="#top">SRK</a>
       <nav>
-        <a class="nav-link" href="#experience">Experience</a>
+        <a class="nav-link" href="#experience">Journey</a>
         <a class="nav-link" href="#education">Education</a>
         <a class="nav-link" href="#skills">Skills</a>
         <a class="nav-link" href="#contact">Contact</a>
@@ -35,16 +35,16 @@
       <section class="hero reveal">
         <div class="hero-grid">
           <div>
-            <p class="eyebrow">Senior Software Engineer</p>
-            <h1>Srikar Reddy Karemma</h1>
+            <p class="eyebrow">Backend Engineer</p>
+            <h1>I build backend systems that stay reliable under heavy traffic.</h1>
             <p class="hero-subtitle">
-              Backend engineer focused on high-scale distributed systems, API platform architecture, and reliability
-              engineering. I build and optimize services that handle intense production traffic with strict latency and
-              availability goals.
+              My journey has been about turning complex platform problems into dependable services: from tier-0
+              authentication flows at Walmart to scientific data APIs at NASA. I focus on practical engineering,
+              measurable performance, and systems that teams can trust in production.
             </p>
             <div class="hero-meta">
+              <span>Srikar Reddy Karemma</span>
               <span>San Jose, California</span>
-              <span>562-269-9357</span>
               <a href="mailto:ksreddy4599@gmail.com">ksreddy4599@gmail.com</a>
             </div>
             <div class="hero-actions">
@@ -54,12 +54,12 @@
             </div>
           </div>
           <aside class="focus-panel" aria-label="Current focus">
-            <p class="eyebrow">Current Focus</p>
-            <h2>Backend architecture at enterprise scale.</h2>
+            <p class="eyebrow">What I Focus On</p>
+            <h2>Engineering backend platforms that scale cleanly.</h2>
             <ul class="focus-list">
-              <li>Distributed services and multi-region backend design</li>
-              <li>High-throughput APIs with low-latency SLO outcomes</li>
-              <li>Resilience, autoscaling, and comprehensive service observability</li>
+              <li>Distributed services and multi-region routing logic</li>
+              <li>High-throughput APIs with low-latency SLO performance</li>
+              <li>Resilience patterns, autoscaling, and actionable observability</li>
             </ul>
           </aside>
         </div>
@@ -68,105 +68,77 @@
       <section class="impact reveal" aria-label="Key impact metrics">
         <article>
           <h2>99.999%</h2>
-          <p>Availability delivered for tier-0 Walmart authentication and session services during peak commerce events.</p>
+          <p>Service availability maintained for tier-0 Walmart authentication and session flows during peak events.</p>
         </article>
         <article>
           <h2>100M+</h2>
-          <p>Monthly authentication requests served by backend systems I helped engineer for Passkey/FIDO2 adoption.</p>
+          <p>Monthly login requests handled by backend services I helped build for the passkey/FIDO2 rollout.</p>
         </article>
         <article>
           <h2>60%</h2>
-          <p>Year-over-year infrastructure cost reduction by optimizing Walmart's IAM session platform footprint.</p>
+          <p>Infrastructure cost reduction after optimizing session workloads and right-sizing from 480 to 225 pods.</p>
         </article>
         <article>
           <h2>3,000+</h2>
-          <p>Datasets made accessible via NASA storage-agnostic APIs.</p>
+          <p>NASA datasets made programmatically accessible through storage-agnostic APIs across mission groups.</p>
         </article>
-      </section>
-
-      <section class="skills-spotlight reveal" aria-label="Core backend strengths">
-        <div class="section-head">
-          <p class="eyebrow">At A Glance</p>
-          <h2>Core Backend Strengths</h2>
-        </div>
-        <div class="spotlight-grid">
-          <article class="spotlight-card">
-            <h3>Languages</h3>
-            <p>Java, TypeScript, JavaScript, SQL, C</p>
-          </article>
-          <article class="spotlight-card">
-            <h3>Backend Stack</h3>
-            <p>Spring Boot, Microservices, REST APIs, Kafka, Node.js, Express</p>
-          </article>
-          <article class="spotlight-card">
-            <h3>Scale and Infra</h3>
-            <p>AWS, GCP, Azure, Kubernetes (AKS), Docker, Redis, PostgreSQL</p>
-          </article>
-          <article class="spotlight-card">
-            <h3>Reliability</h3>
-            <p>Prometheus, Grafana, Splunk, Dynatrace, rate limiting, autoscaling, SLO alerting</p>
-          </article>
-        </div>
       </section>
 
       <section id="experience" class="section reveal">
         <div class="section-head">
-          <p class="eyebrow">Work</p>
-          <h2>Experience</h2>
+          <p class="eyebrow">My Journey</p>
+          <h2>From Data APIs to Enterprise Backend Platforms</h2>
         </div>
 
         <article class="card role-card">
           <div class="role-topline">
-            <h3>Walmart Global Tech</h3>
-            <p>Sunnyvale, California</p>
+            <h3>Chapter 1: Scaling Core Commerce Services</h3>
+            <p>Walmart Global Tech | Sunnyvale, CA</p>
           </div>
           <div class="role-title-row">
             <p class="role-title">Senior Software Engineer</p>
             <p class="role-duration">01/2022 - Present (Promoted twice)</p>
           </div>
           <div class="tag-row">
-            <span>Backend Engineering</span>
-            <span>Distributed Systems</span>
-            <span>API Platform</span>
-            <span>Kubernetes</span>
-            <span>Platform Reliability</span>
+            <span>Java</span>
+            <span>Spring Boot</span>
+            <span>Microservices</span>
+            <span>AKS</span>
+            <span>Redis</span>
+            <span>Kafka</span>
           </div>
           <p>
-            Senior backend engineer on Walmart's tier-0 platform, building high-throughput services that process
-            mission-critical authentication and session traffic for Walmart.com and global subsidiaries.
+            I work on backend services behind Walmart's tier-0 IAM and session platforms. The goal has been consistent:
+            keep critical user flows fast, stable, and cost-efficient even during global traffic spikes.
           </p>
           <ul>
             <li>
-              Architected high-throughput SSO and federated session services for Walmart Commerce Platform, enabling
+              Developed high-throughput SSO and federated session services for Walmart Commerce Platform, enabling
               one-login journeys across web, mobile, and partner channels with sub-150 ms global latency.
             </li>
             <li>
-              Re-architected core session platform for multi-tenant IAM: migrated 1.2B+ sessions in 3 days,
-              sustained ~5K TPS, and scaled to 25M+ active sessions and 1.56M session validations per minute.
+              Rebuilt the legacy session flow into a multi-tenant backend stack; migrated 1.2B+ sessions in three days,
+              sustained ~5K TPS, and scaled to 25M+ active sessions.
             </li>
             <li>
-              Reduced compute/storage footprint from 480 to 225 pods for a 20K OPM workload, delivering about
-              $920K annual savings and 30-50% API latency improvements.
+              Improved runtime efficiency for a 20K OPM workload by reducing footprint from 480 to 225 pods, producing
+              roughly $920K yearly savings and 30-50% latency improvement on critical APIs.
             </li>
             <li>
-              Led end-to-end FIDO2/passkey backend rollout on AKS with Flagger canary strategy, tracking p99 and
-              device-mix regressions across 100M+ monthly logins with zero incidents.
+              Delivered passkey/FIDO2 backend rollout on AKS with Flagger canary releases and regression monitoring
+              across 100M+ monthly logins, with no production incidents.
             </li>
             <li>
-              Built CoreID hybrid routing layer for ASDA migration, enabling feature-flagged store-by-store cutover
-              for 1,200 stores and 150K associates without POS or workforce access disruption.
-            </li>
-            <li>
-              Strengthened resiliency and observability with fine-grained rate limiting, CPU/memory-driven autoscale,
-              SLO alerting, and Prometheus/Istio/Logstash telemetry for proactive incident prevention.
+              Built CoreID routing logic for ASDA migration, enabling phased store-by-store cutover for 1,200 stores
+              and 150K associates without disrupting POS or workforce access.
             </li>
           </ul>
         </article>
 
         <article class="card role-card">
           <div class="role-topline">
-            <h3>NASA</h3>
-            <p>Fairfax, Virginia</p>
+            <h3>Chapter 2: Building Scientific Data Access at Scale</h3>
+            <p>NASA | Fairfax, VA</p>
           </div>
           <div class="role-title-row">
             <p class="role-title">Software Development Engineer</p>
@@ -174,101 +146,93 @@
           </div>
           <div class="tag-row">
             <span>REST APIs</span>
-            <span>HAPI</span>
-            <span>Time-series Data</span>
-            <span>Data Platform</span>
+            <span>JSON/CSV</span>
+            <span>Time-series</span>
+            <span>Data Interoperability</span>
           </div>
           <p>
-            Developer for NASA's Helio-Physics Application Programmer Interface (HAPI), defining and implementing
-            RESTful and streaming specifications for mission data delivery.
+            At NASA, I developed backend APIs for the Heliophysics Application Programmer Interface (HAPI) so mission
+            data could be queried through a consistent, machine-friendly interface.
           </p>
           <ul>
             <li>
-              Implemented HAPI-compliant services across required endpoints, transforming mission telemetry into
-              machine-processable JSON/CSV time-series with rich metadata.
+              Implemented HAPI-compliant REST endpoints that ingested mission telemetry and served normalized JSON/CSV
+              time-series data with rich metadata for scientific analysis.
             </li>
             <li>
-              Designed storage-agnostic data access APIs that abstracted file formats and mission-specific layouts,
-              enabling cross-mission analysis over 3,000+ datasets across 60+ mission groups.
+              Built storage-agnostic data access services so clients could query mission datasets without handling
+              file-layout differences, unlocking cross-mission analysis over 3,000+ datasets and 60+ mission groups.
             </li>
             <li>
-              Collaborated with heliophysics data-center teams to harden spec and server behavior, improving
-              interoperability while reducing custom ETL and parser work for research workflows.
+              Worked with heliophysics data-center teams to improve API compatibility and error handling, reducing
+              custom ETL/parser effort in research workflows.
             </li>
           </ul>
           <p>
             Project reference:
-            <a href="https://cdaweb.gsfc.nasa.gov/registry/hdp/hapi/" target="_blank" rel="noreferrer"
-              >The HAPI specification</a
-            >
+            <a href="https://cdaweb.gsfc.nasa.gov/registry/hdp/hapi/" target="_blank" rel="noreferrer">The HAPI specification</a>
           </p>
         </article>
       </section>
 
+      <section id="skills" class="section reveal">
+        <div class="section-head">
+          <p class="eyebrow">Technology Stack</p>
+          <h2>The Tools Behind My Backend Work</h2>
+        </div>
+        <div class="skills-visual-grid">
+          <article class="card skill-visual-card">
+            <img src="assets/graphics/backend-systems.svg" alt="Backend systems illustration" />
+            <h3>Backend Systems</h3>
+            <p>Spring Boot, Microservices, REST APIs, Kafka, Node.js, Express</p>
+          </article>
+          <article class="card skill-visual-card">
+            <img src="assets/graphics/languages.svg" alt="Programming languages illustration" />
+            <h3>Languages</h3>
+            <p>Java, TypeScript, JavaScript, SQL, C</p>
+          </article>
+          <article class="card skill-visual-card">
+            <img src="assets/graphics/cloud-infra.svg" alt="Cloud infrastructure illustration" />
+            <h3>Cloud and Infrastructure</h3>
+            <p>AWS, GCP, Azure, Kubernetes (AKS), Docker, Redis, PostgreSQL, MongoDB</p>
+          </article>
+          <article class="card skill-visual-card">
+            <img src="assets/graphics/observability.svg" alt="Observability and reliability illustration" />
+            <h3>Reliability and Observability</h3>
+            <p>Prometheus, Grafana, Splunk, Dynatrace, SLO alerting, autoscaling, rate limiting</p>
+          </article>
+        </div>
+      </section>
+
       <section id="education" class="section reveal">
         <div class="section-head">
-          <p class="eyebrow">Academic</p>
+          <p class="eyebrow">Foundation</p>
           <h2>Education</h2>
         </div>
         <div class="edu-grid">
           <article class="card">
             <h3>George Mason University</h3>
             <p class="edu-degree">Master of Science in Computer Science</p>
-            <p>Fairfax, Virginia</p>
-            <p>01/2020 - 12/2021</p>
+            <p>Fairfax, Virginia | 01/2020 - 12/2021</p>
             <p>GPA: 3.80</p>
           </article>
           <article class="card">
             <h3>Jawaharlal Nehru Technological University</h3>
             <p class="edu-degree">Bachelor of Engineering in Computer Science</p>
-            <p>Hyderabad, India</p>
-            <p>06/2015 - 05/2019</p>
+            <p>Hyderabad, India | 06/2015 - 05/2019</p>
             <p>GPA: 3.70</p>
           </article>
         </div>
       </section>
 
-      <section id="skills" class="section reveal">
-        <div class="section-head">
-          <p class="eyebrow">Toolset</p>
-          <h2>Skills</h2>
-        </div>
-        <div class="skills-grid">
-          <article class="card">
-            <h3>Languages</h3>
-            <p>Java (primary), JavaScript, TypeScript, SQL, C</p>
-          </article>
-          <article class="card">
-            <h3>Backend</h3>
-            <p>Spring Boot, Spring, REST APIs, Microservices, Kafka, Node.js, Express.js</p>
-          </article>
-          <article class="card">
-            <h3>Data</h3>
-            <p>Oracle, SQL Server, PostgreSQL, MongoDB, Redis, Cosmos DB</p>
-          </article>
-          <article class="card">
-            <h3>Cloud and Infra</h3>
-            <p>AWS, GCP, Azure, Docker, Kubernetes (AKS)</p>
-          </article>
-          <article class="card">
-            <h3>DevOps and Observability</h3>
-            <p>Git, Jenkins, Maven, Gradle, Nexus, Artifactory, Vault, Akeyless, Prometheus, Grafana, Kibana, Splunk, Dynatrace</p>
-          </article>
-          <article class="card">
-            <h3>Frontend</h3>
-            <p>React.js, Angular.js (working knowledge)</p>
-          </article>
-        </div>
-      </section>
-
       <section id="contact" class="section contact reveal">
-        <h2>Let's Build Reliable Systems at Scale</h2>
+        <h2>Let’s Build Serious Backend Systems</h2>
         <p>
-          Open to conversations about backend architecture, distributed systems, and high-scale platform engineering.
+          Open to conversations about backend engineering, distributed systems, and platform reliability work.
         </p>
         <div class="hero-actions">
           <a class="btn btn-primary" href="mailto:ksreddy4599@gmail.com">Email Me</a>
-          <a class="btn btn-secondary" href="https://ksr4599.github.io" target="_blank" rel="noreferrer">Website</a>
+          <a class="btn btn-secondary" href="https://www.linkedin.com/in/srikarreddykaremma/" target="_blank" rel="noreferrer">LinkedIn</a>
         </div>
       </section>
     </main>
