Add custom metric graphics to impact section

--- a/index.html
+++ b/index.html
@@ -67,18 +67,22 @@
 
       <section class="impact reveal" aria-label="Key impact metrics">
         <article>
+          <img class="metric-art" src="assets/graphics/metric-uptime.svg" alt="Availability trend graphic" />
           <h2>99.999%</h2>
           <p>Service availability maintained for tier-0 Walmart authentication and session flows during peak events.</p>
         </article>
         <article>
+          <img class="metric-art" src="assets/graphics/metric-traffic.svg" alt="Request volume graphic" />
           <h2>100M+</h2>
           <p>Monthly login requests handled by backend services I helped build for the passkey/FIDO2 rollout.</p>
         </article>
         <article>
+          <img class="metric-art" src="assets/graphics/metric-efficiency.svg" alt="Cost efficiency graphic" />
           <h2>60%</h2>
           <p>Infrastructure cost reduction after optimizing session workloads and right-sizing from 480 to 225 pods.</p>
         </article>
         <article>
+          <img class="metric-art" src="assets/graphics/metric-datasets.svg" alt="Dataset federation graphic" />
           <h2>3,000+</h2>
           <p>NASA datasets made programmatically accessible through storage-agnostic APIs across mission groups.</p>
         </article>
