Add custom focus graphic to hero focus panel

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
               <li>High-throughput APIs with low-latency SLO performance</li>
               <li>Resilience patterns, autoscaling, and actionable observability</li>
             </ul>
+            <img class="focus-art" src="assets/graphics/focus-map.svg" alt="Backend focus map graphic" />
           </aside>
         </div>
       </section>
