Add Walmart role progression text and graphic

--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@
           </div>
           <div class="role-title-row">
             <p class="role-title">Senior Software Engineer</p>
-            <p class="role-duration">01/2022 - Present (Promoted twice)</p>
+            <div class="role-duration role-progress">
+              <p>01/2022 - Present | Intern -> SDE-3 -> Senior Software Engineer</p>
+              <img src="assets/graphics/walmart-growth.svg" alt="Career progression graphic from Intern to SDE-3 to Senior Software Engineer" />
+            </div>
           </div>
           <div class="tag-row">
             <span>Java</span>
