Add profile photo to hero section

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
       <section class="hero reveal">
         <div class="hero-grid">
           <div>
+            <div class="profile-chip">
+              <img src="assets/images/profile.png" alt="Portrait of Srikar Reddy Karemma" />
+            </div>
             <p class="eyebrow">Backend Engineer</p>
             <h1>I build backend systems that stay reliable under heavy traffic.</h1>
             <p class="hero-subtitle">
