Use full name in header and add interactive branded nav styling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     <div id="scroll-progress" class="scroll-progress" aria-hidden="true"></div>
 
     <header class="site-header">
-      <a class="brand" href="#top">SRK</a>
+      <a class="brand" href="#top" aria-label="Srikar Reddy Karemma">
+        <span class="brand-orb" aria-hidden="true"></span>
+        <span class="brand-name">Srikar Reddy Karemma</span>
+      </a>
       <nav>
         <a class="nav-link" href="#experience">Journey</a>
         <a class="nav-link" href="#education">Education</a>
