Enlarge header name and add richer interactive brand graphics

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <a class="brand" href="#top" aria-label="Srikar Reddy Karemma">
         <span class="brand-orb" aria-hidden="true"></span>
         <span class="brand-name">Srikar Reddy Karemma</span>
+        <span class="brand-bars" aria-hidden="true"></span>
       </a>
       <nav>
         <a class="nav-link" href="#experience">Journey</a>
